[tool.poetry]
name = "sprayingtoolkit"
version = "0.1.0"
description = ""
authors = ["Marcello Salvati <byt3bl33d3r@pm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.3"
httpx-ntlm = "^0.0.6"
lxml = "^4.5.1"
fastapi = "^0.55.1"
pydantic = "^1.5.1"
typer = "^0.2.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
pylint = "^2.5.2"
pytest = "^5.4.3"
typer-cli = "^0.0.9"
pytest-asyncio = "^0.12.0"
faker = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
